# LearnFFmpeg

./: .gitignore  readme.md
HelloFFmepg/: HelloFFmepg.cpp  HelloFFmepg.pro
LearnFFmpeg/: CMakeLists.txt
LearnFFmpeg/01MemoryModel/: CMakeLists.txt  avpacket.c  main.c
LearnFFmpeg/02Demux/: CMakeLists.txt  main.cpp
LearnFFmpeg/03AAC/: CMakeLists.txt  main.cpp
LearnFFmpeg/04Nalu/: CMakeLists.txt  main.cpp
LearnFFmpeg/05FlvParser/: CMakeLists.txt  FlvMetaData.cpp  FlvParser.cpp  main.cpp
LearnFFmpeg/06Decode/: CMakeLists.txt  main.cpp
LearnFFmpeg/HelloFFmepg/: CMakeLists.txt  HelloFFmepg.cpp  HelloFFmepg.h
LearnFFmpeg/dependents/format/: format.h
LearnFFmpeg/testvideo/: testvideo1_48000_129_2.pcm  testvideo1_48000_2_f32le.pcm
demo01_memorymodel/: avpacket.c  demo01_memorymodel.pro  main.c
demo02_demux/: demo02_demux.pro  main.cpp
demo03_aac/: main.cpp
demo04_nalu/: demo04_nalu.pro  main.cpp
testvideo/: testvideo1_out.aac
